--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "postcss": "^8.1.4",
     "postcss-loader": "^4.0.4",
     "postcss-preset-env": "^6.7.0",
+    "postcss-pxtorem": "^5.1.1",
     "sass": "^1.27.0",
     "sass-loader": "^10.0.3",
     "style-loader": "^2.0.0",
