--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "csv-loader": "^3.0.3",
     "eslint": "^7.13.0",
     "eslint-config-prettier": "^6.15.0",
+    "eslint-config-eslint": "^6.0.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-react": "^7.21.5",
     "eslint-webpack-plugin": "^2.3.0",
